# Document_Preprocessing

./: app.py  parse.py  parser_megaparse.py  pyproject.toml  requirements.txt
MegaParse/: pyproject.toml
MegaParse/libs/megaparse/src/megaparse/: megaparse.py
MegaParse/libs/megaparse/src/megaparse/parser/: base.py  doctr_parser.py  megaparse_vision.py  strategy.py  unstructured_parser.py
MegaParse/libs/megaparse_sdk/megaparse_sdk/: client.py
MegaParse/libs/megaparse_sdk/megaparse_sdk/endpoints/: file_upload.py  url_upload.py
MegaParse/libs/megaparse_sdk/megaparse_sdk/utils/: load_ssl.py
